data/derived/comb/progs/unify/prog4432.ml.out
Characters 170-171:
  multiplier (float_of_int i) j in
                           ^
Error: This expression has type float but an expression was expected of type
         int
